--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <div class="header-container">
-          <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
+          <img src="../img/logo.png" alt="Лого" width="154" height="64">
           <!--          Странная фигня творится с картинками. Они то включаются то выключаются и приходится то прописывать то убирать префикс ../gllacy -->
           <nav class="main-navigation">
             <ul class="main-menu index-menu">
@@ -62,20 +62,20 @@
             </div>
 
             <!--          Кнопка входа и форма авторизации-->
-
+<!--<div class="login-hover">-->
             <a class="login user-block-btn" href="#">Вход</a>
             <div class="login-form">
               <form action="#" method="post">
                 <input type="email" name="email" placeholder="Электронная почта">
                 <input type="password" name="password" placeholder="Пароль">
-                <input class="login website red-btn" type="button" name="button" value="Войти">
+                <button class="login-website red-btn" type="button" name="button" value="Войти">Войти </button>
               </form>
               <div class="forgot-check">
                 <a href="#">Забыли пароль?</a>
                 <a href="#">Новая регистрация</a>
               </div>
             </div>
-
+<!--</div>-->
             <!--          корзина-->
 
             <a class="basket user-block-btn" href="#">Пусто</a>
@@ -140,7 +140,7 @@
 
         <article class="wrapper-ice-item">
           <section class="ice-item ice-item-hit">
-            <img src="../gllacy/img/item1.png" alt="img-icecream" width="267" height="267">
+            <img src="../img/item1.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">310&#8381;/<span class="kg">кг</span></span>
             <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
             <div class="hover-block">
@@ -149,7 +149,7 @@
           </section>
 
           <section class="ice-item ice-item-hit">
-            <img src="../gllacy/img/item2.png" alt="img-icecream" width="267" height="267">
+            <img src="../img/item2.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">380&#8381;/<span class="kg">кг</span></span>
             <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
             <div class="hover-block">
@@ -159,7 +159,7 @@
           </section>
 
           <section class="ice-item ice-item-hit">
-            <img src="../gllacy/img/item3.png" alt="img-icecream" width="267" height="267">
+            <img src="../img/item3.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">355&#8381;/<span class="kg">кг</span></span>
             <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
             <div class="hover-block">
@@ -168,7 +168,7 @@
           </section>
 
           <section class="ice-item ice-item-hit">
-            <img src="../gllacy/img/item4.png" alt="img-icecream" width="267" height="267">
+            <img src="../img/item4.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">415&#8381;/<span class="kg">кг</span></span>
             <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
             <div class="hover-block">
@@ -209,6 +209,7 @@
         <div class="map-wrapper">
           <div class="map">
             <!--   контактное инфо-->
+            
             <div class="wrapper-map-contact">
             <div class="map-contact">
               <p>Адрес главного офиса<br>
@@ -220,8 +221,10 @@
               <b>8 812 450-25-25</b>
               </p>
               <p>(с 10 до 20 ежедневно)</p>
+              <div class="feedback-hover">
               <button type="submit" class="red-btn open-feedback-form">Форма обратной связи</button>
               <!--      Форма обратной связи-->
+              
               <div class="feedback-form">
               <div class="feedback-form-wrapper">
                   <form action="#" method="post">
@@ -234,6 +237,7 @@
                     <button type="submit" class="red-btn send-feedback-btn">Отправить</button>
                   </form>
                 </div>
+              </div>
               </div>
             </div>
             </div>
@@ -264,7 +268,7 @@
           </section>
 
           <section class="footer-copyright">
-            <a href="https://htmlacademy.ru"><img src="../gllacy/img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
+            <a href="https://htmlacademy.ru"><img src="../img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
             <p>Сделано в <a href="https://htmlacademy.ru">HTML Academy © 2017</a></p>
           </section>
         </div>
