--- a/catalog.html
+++ b/catalog.html
@@ -336,10 +336,10 @@
 
 
         <section class="footer-social">
-          <a class="social-btn social-btn-tw" href="#" alt="Твиттер"></a>
-          <a class="social-btn social-btn-inst" href="#" alt="Инстаграм"></a>
-          <a class="social-btn social-btn-fb" href="#" alt="Фейсбук"></a>
-          <a class="social-btn social-btn-vk" href="#" alt="Вконтакте"></a>
+          <a class="social-btn social-btn-tw" href="#" ></a>
+          <a class="social-btn social-btn-inst" href="#" ></a>
+          <a class="social-btn social-btn-fb" href="#" ></a>
+          <a class="social-btn social-btn-vk" href="#" ></a>
         </section>
 
         <section class="footer-info">
