--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
           </section>
         </div>
-        </div>
+<!--        </div>-->
         <div class="map-wrapper">
           <div class="map">
             <!--   контактное инфо-->
@@ -249,10 +249,10 @@
 
 
           <section class="footer-social">
-            <a class="social-btn social-btn-tw" href="#" alt="Твиттер"></a>
-            <a class="social-btn social-btn-inst" href="#" alt="Инстаграм"></a>
-            <a class="social-btn social-btn-fb" href="#" alt="Фейсбук"></a>
-            <a class="social-btn social-btn-vk" href="#" alt="Вконтакте"></a>
+            <a class="social-btn social-btn-tw" href="#" ></a>
+            <a class="social-btn social-btn-inst" href="#" ></a>
+            <a class="social-btn social-btn-fb" href="#" ></a>
+            <a class="social-btn social-btn-vk" href="#" ></a>
           </section>
 
           <section class="footer-info">
@@ -268,7 +268,7 @@
           </section>
 
           <section class="footer-copyright">
-            <a href="https://htmlacademy.ru"><img src="../img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
+            <a href="https://htmlacademy.ru"><img src="../img/htmlAcademy-footer.png" width="108" height="38" alt="logo-htmlacademy"></a>
             <p>Сделано в <a href="https://htmlacademy.ru">HTML Academy © 2017</a></p>
           </section>
         </div>
